[add] best movies ratings and features

--- a/First exploration of data.ipynb
+++ b/First exploration of data.ipynb
@@ -13,7 +13,11 @@
     "import plotly\n",
     "import plotly.graph_objs as go\n",
     "plotly.offline.init_notebook_mode()\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "DATA_DIR = \"data/\"\n",
+    "SELECTED_DATA_DIR = \"selected-data/\"\n",
+    "CSV_DIR = DATA_DIR + \"csv/\""
    ]
   },
   {
@@ -28,8 +32,6 @@
     "\n",
     "user_ratings = pd.DataFrame()\n",
     "\n",
-    "DATA_DIR = \"data/\"\n",
-    "CSV_DIR = DATA_DIR + \"csv/\"\n",
     "LIMIT=1000\n",
     "\n",
     "for (i, filename) in enumerate(os.listdir(CSV_DIR)):\n",
@@ -46,10 +48,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "movie_ratings = pd.read_json(\"data/imdb_database.json\")\n",
+    "movie_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "best_movies = pd.read_csv(SELECTED_DATA_DIR + \"subsetmovie.csv\", sep=\";\", header=-1)\n",
+    "best_movies.columns = [\"distribution\", \"votes\", \"rating\", \"title\"]\n",
+    "best_movies.title = best_movies.title.apply(lambda x: x.strip())\n",
+    "best_movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "best_movies_ratings = pd.merge(best_movies, movie_ratings, how='left', left_on=\"title\", right_on=\"id\")\n",
+    "best_movies_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "best_movies_ratings.to_csv(SELECTED_DATA_DIR + \"best_movie_ratings_features.csv\")"
+   ]
   },
   {
    "cell_type": "code",
