[ref] data pipeline : data filtering -> feature engineering -> learning

--- a/Data Filtering.ipynb
+++ b/Data Filtering.ipynb
@@ -15,7 +15,22 @@
     "plotly.offline.init_notebook_mode()\n",
     "import os\n",
     "import csv\n",
-    "from shutil import copyfile"
+    "from tqdm import tqdm\n",
+    "import random\n",
+    "\n",
+    "DATA_DIR = \"data/\"\n",
+    "SELECTED_DATA_DIR = \"selected-data/\"\n",
+    "CSV_DIR = \"csv/\"\n",
+    "MOVIES_FILE = \"imdb_database.json\"\n",
+    "MOVIES_FILE_OUT = \"best_movie_ratings_features.csv\"\n",
+    "USERS_FILE_OUT = \"users_ratings.csv\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Subset of movies"
    ]
   },
   {
@@ -26,8 +41,21 @@
    },
    "outputs": [],
    "source": [
-    "df_subset = pd.read_csv('selected-data/subsetmovie.csv', sep=';', header=-1)\n",
-    "df_subset.columns = [\"distribution\", \"votes\", \"rating\", \"title\"]"
+    "def flatten_aka(d):\n",
+    "    try:\n",
+    "        return [x['name'] for x in d]\n",
+    "    except:\n",
+    "        return []\n",
+    "\n",
+    "movies = pd.read_json(DATA_DIR + MOVIES_FILE)\n",
+    "movies = movies[movies.kind == \"movie\"]\n",
+    "movies[\"title\"] = movies.id\n",
+    "movies[\"votes\"] = movies.rating.apply(lambda x: x['votes'])\n",
+    "movies[\"rating\"] = movies.rating.apply(lambda x: x['rank'])\n",
+    "movies[\"aka\"] = movies.aka.apply(flatten_aka)\n",
+    "movies = movies.drop_duplicates(subset=\"title\")\n",
+    "movies = movies[[\"aka\", \"genres\", \"year\", \"votes\", \"rating\", \"title\"]].set_index(\"title\").dropna()\n",
+    "movies.shape"
    ]
   },
   {
@@ -38,7 +66,9 @@
    },
    "outputs": [],
    "source": [
-    "df_subset.sample()"
+    "movies = movies.sort_values(by=\"votes\", ascending=False)\n",
+    "movies = movies.loc[movies.index[:1000]]\n",
+    "movies.sample()"
    ]
   },
   {
@@ -49,27 +79,63 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = \"data/\"\n",
-    "CSV_DIR = DATA_DIR + \"csv/\"\n",
-    "CSV_DIR_OUTPU = \"selected-data/csv\""
+    "movies.to_csv(\"selected-data/best_movie_ratings_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Users with at least N recommandations for these movies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for (i, filename) in enumerate(os.listdir(CSV_DIR)):\n",
-    "    frame = pd.read_csv(CSV_DIR + filename, header=-1)\n",
-    "    frame.columns = [\"user\", \"movie\", \"rating\", \"link\"]\n",
-    "    count = (len(list(set(frame.movie).intersection(df_subset.title))))\n",
+    "N = 50\n",
+    "users = pd.DataFrame()\n",
+    "user_files = os.listdir(DATA_DIR + CSV_DIR)\n",
+    "random.shuffle(user_files)\n",
+    "user_files = user_files[:10000]\n",
+    "for (i, filename) in tqdm(enumerate(user_files)):\n",
+    "    user = pd.read_csv(DATA_DIR + CSV_DIR + filename, header=-1)\n",
+    "    user = user.set_index(1)\n",
+    "    count = user.join(movies, how='inner', lsuffix=\"user_\", rsuffix=\"movie_\").size\n",
     "    if count > 50:\n",
-    "        copyfile(CSV_DIR + filename, 'selected-data/csv/' + filename)\n",
-    "        "
+    "        # get only recommandations that are in movies\n",
+    "        users = users.append(user[user.index.isin(movies.index)])\n",
+    "\n",
+    "users.columns = [\"user\", \"rating\", \"link\"]\n",
+    "users.index.rename(\"movie\", inplace=True)\n",
+    "users.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#for id, recomm in tqdm(users.iterrows()):\n",
+    "#    assert(id in movies.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "users.to_csv(SELECTED_DATA_DIR + USERS_FILE_OUT)"
    ]
   },
   {
@@ -98,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
