--- a/First attempt at learning.ipynb
+++ b/First attempt at learning.ipynb
@@ -15,10 +15,11 @@
     "plotly.offline.init_notebook_mode()\n",
     "import os\n",
     "import random\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "DATA_DIR = \"data/\"\n",
     "SELECTED_DATA_DIR = \"selected-data/\"\n",
-    "CSV_DIR = DATA_DIR + \"csv/\""
+    "MOVIES_FILE = \"best_movie_ratings_features_engineered.csv\"\n",
+    "USERS_FILE = \"users_ratings.csv\""
    ]
   },
   {
@@ -29,8 +30,8 @@
    },
    "outputs": [],
    "source": [
-    "movies = pd.read_csv(SELECTED_DATA_DIR + \"best_movie_ratings_features_engineered.csv\", index_col=0)\n",
-    "movies = movies.set_index(\"title\")\n",
+    "movies = pd.read_csv(SELECTED_DATA_DIR + MOVIES_FILE, index_col=0)\n",
+    "movies.rating = movies.rating/10\n",
     "movies.sample()"
    ]
   },
@@ -42,20 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "users = pd.DataFrame()\n",
-    "\n",
-    "LIMIT=100\n",
-    "\n",
-    "files = os.listdir(SELECTED_DATA_DIR + \"csv/\")\n",
-    "random.shuffle(files)\n",
-    "\n",
-    "for (i, filename) in enumerate(files):\n",
-    "    frame = pd.read_csv(SELECTED_DATA_DIR + \"csv/\" + filename, header=-1)\n",
-    "    users = users.append(frame, ignore_index=True)\n",
-    "    if (i > LIMIT):\n",
-    "        break\n",
-    "    \n",
-    "users.columns = [\"user\", \"movie\", \"rating\", \"link\"]\n",
+    "users = pd.read_csv(SELECTED_DATA_DIR + USERS_FILE, index_col=0)\n",
     "users.rating = users.rating/10\n",
     "users.sample()"
    ]
@@ -68,12 +56,8 @@
    },
    "outputs": [],
    "source": [
-    "user = users[users.user == users.sample().user.item()]\n",
-    "user = user[user.movie.isin(movies.index)] # get only recommandations for movies that are in our list\n",
-    "for id, recomm in user.iterrows():\n",
-    "    assert(recomm.movie in movies.index)\n",
-    "user = user.set_index(\"movie\")\n",
-    "user.sample()"
+    "user = users[users.user.isin(users.user.sample())]\n",
+    "user.shape"
    ]
   },
   {
@@ -84,8 +68,9 @@
    },
    "outputs": [],
    "source": [
+    "# get only movies that this user rated\n",
     "movies_user = movies[movies.index.isin(user.index)]\n",
-    "movies_user.sample()"
+    "movies_user.shape"
    ]
   },
   {
@@ -102,20 +87,22 @@
     "\n",
     "def get_movie_features(movie):\n",
     "    if isinstance(movie, pd.Series):\n",
-    "        return movie[2:]\n",
+    "        return movie[2:].as_matrix()\n",
     "    elif isinstance(movie, pd.DataFrame):\n",
     "        return get_movie_features(movie.loc[movie.index[0]])\n",
     "    else:\n",
     "        raise TypeError(\"{} should be a Series or DataFrame\".format(movie))\n",
     "    \n",
-    "\n",
-    "def greedy_choice(user_features, movies, epsilon=0.1):\n",
+    "def best_recommandation(user_features, movies):\n",
+    "    utilities = np.zeros(movies.shape[0])\n",
+    "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
+    "        movie_features = get_movie_features(movie)\n",
+    "        utilities[i] = utility(user_features, movie_features)\n",
+    "    return movies[movies.index == movies.index[utilities.argmax()]]\n",
+    "    \n",
+    "def greedy_choice(user_features, movies, epsilon=1):\n",
     "    if random.random() > epsilon: # choose the best\n",
-    "        utilities = np.zeros(movies.shape[0])\n",
-    "        for i, (title, movie) in enumerate(movies.iterrows()):\n",
-    "            movie_features = get_movie_features(movie)\n",
-    "            utilities[i] = utility(user_features, movie_features)\n",
-    "        return movies[movies.index == movies.index[utilities.argmax()]]\n",
+    "        return best_recommandation(user_features, movies)\n",
     "    else:\n",
     "        return movies.sample()\n",
     "        \n",
@@ -125,15 +112,50 @@
     "def update_features(user_features, movie_features, rating, t):\n",
     "    return iterative_mean(user_features, movie_features * rating, t)\n",
     "\n",
-    "user_features = np.zeros(movies_user.shape[1] - 2)\n",
-    "Ui = 0\n",
+    "def train_user(user, movies):\n",
+    "    user_features = np.zeros(movies.shape[1] - 2)\n",
+    "    for t in tqdm(range(1, 10000)):\n",
+    "        recommandation = greedy_choice(user_features, movies)\n",
+    "        recommandation_features = get_movie_features(recommandation)\n",
+    "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
+    "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
+    "    return user_features\n",
     "\n",
-    "for t in range(1, 10000):\n",
-    "    recommandation = greedy_choice(user_features, movies_user)\n",
-    "    recommandation_features = get_movie_features(recommandation)\n",
-    "    user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
-    "    user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
-    "print(user_features)"
+    "user_features = train_user(user, movies_user)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "recomm = best_recommandation(user_features, movies)\n",
+    "recomm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "recomm.as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user_features"
    ]
   },
   {
