[enh] epsilon greedy 0.1

--- a/src/First attempt at learning.ipynb
+++ b/src/First attempt at learning.ipynb
@@ -95,6 +95,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "movies_user.sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +142,7 @@
     "        utilities[i] = utility(user_features, movie_features)\n",
     "    return movies[movies.index == movies.index[utilities.argmax()]]\n",
     "    \n",
-    "def greedy_choice(user_features, movies, epsilon=1):\n",
+    "def greedy_choice(user_features, movies, epsilon=0.1):\n",
     "    \"\"\" greedy approach to the problem \"\"\"\n",
     "    if random.random() > epsilon: # choose the best\n",
     "        return best_recommandation(user_features, movies)\n",
