[fix] wasnt taking user ratings but movie ratings

--- a/src/First attempt at learning.ipynb
+++ b/src/First attempt at learning.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "def utility(user_features, movie_features):\n",
     "    \"\"\" Compute utility based on user preferences and movie preferences \"\"\"\n",
-    "    return user_features.dot(movie_features)\n",
+    "    return user_features.dot(movie_features)/user_features.shape[0]\n",
     "\n",
     "def get_movie_features(movie):\n",
     "    \"\"\" selected features from dataframe \"\"\"\n",
@@ -198,15 +198,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def test_user(user, user_features, movies):\n",
-    "    allrec = all_recommandation(user_features, movies).utilities.rank().sort_index()\n",
-    "    movies = movies.sort_values(by=\"rating\").rating.rank().sort_index()\n",
-    "    print(spearmanr(allrec, movies))\n",
-    "    return math.sqrt(mean_squared_error(allrec.as_matrix(), movies.as_matrix()))/allrec.size\n",
+    "    allrec = all_recommandation(user_features, movies).utilities.sort_index()\n",
+    "    user_ratings = user[user.index.isin(movies.index)].sort_values(by=\"rating\").rating.sort_index()\n",
+    "    print(spearmanr(allrec.rank(), user_ratings.rank()))\n",
+    "    return math.sqrt(mean_squared_error(allrec.as_matrix(), user_ratings.as_matrix()))\n",
     "    "
    ]
   },
@@ -214,13 +214,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "error = test_user(user, user_features, test)\n",
     "error"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
