--- a/src/Data Filtering.ipynb
+++ b/src/Data Filtering.ipynb
@@ -18,8 +18,8 @@
     "from tqdm import tqdm\n",
     "import random\n",
     "\n",
-    "DATA_DIR = \"data/\"\n",
-    "SELECTED_DATA_DIR = \"selected-data/\"\n",
+    "DATA_DIR = \"../data/\"\n",
+    "SELECTED_DATA_DIR = \"../selected-data/\"\n",
     "CSV_DIR = \"csv/\"\n",
     "MOVIES_FILE = \"imdb_database.json\"\n",
     "MOVIES_FILE_OUT = \"best_movie_ratings_features.csv\"\n",
@@ -75,11 +75,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "movies.to_csv(\"selected-data/best_movie_ratings_features.csv\")"
+    "movies.to_csv(SELECTED_DATA_DIR + MOVIES_FILE_OUT)"
    ]
   },
   {
