--- a/src/Feature engineering.ipynb
+++ b/src/Feature engineering.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "DATA_DIR = \"data/\"\n",
-    "SELECTED_DATA_DIR = \"selected-data/\"\n",
+    "SELECTED_DATA_DIR = \"../selected-data/\"\n",
     "CSV_DIR = DATA_DIR + \"csv/\"\n",
     "MOVIES_FILE = \"best_movie_ratings_features.csv\"\n",
     "MOVIES_ENGINEERED_FILE = \"best_movie_ratings_features_engineered.csv\""
