[add] utility depends on novelty too

--- a/src/First attempt at learning.ipynb
+++ b/src/First attempt at learning.ipynb
@@ -112,37 +112,41 @@
    },
    "outputs": [],
    "source": [
-    "def utility(user_features, movie_features):\n",
+    "def utility(user_features, movie_features, epoch, s=1):\n",
     "    \"\"\" Compute utility based on user preferences and movie preferences \"\"\"\n",
-    "    return user_features.dot(movie_features)/user_features.shape[0]\n",
+    "    return user_features.dot(movie_features) * (1 - math.exp(-epoch/s))\n",
     "\n",
     "def get_movie_features(movie):\n",
     "    \"\"\" selected features from dataframe \"\"\"\n",
     "    if isinstance(movie, pd.Series):\n",
-    "        return movie[2:].copy()\n",
+    "        return movie[-50:]\n",
     "    elif isinstance(movie, pd.DataFrame):\n",
     "        return get_movie_features(movie.loc[movie.index[0]])\n",
     "    else:\n",
     "        raise TypeError(\"{} should be a Series or DataFrame\".format(movie))\n",
     "    \n",
-    "def best_recommandation(user_features, movies):\n",
+    "def best_recommandation(user_features, movies, epoch):\n",
     "    \"\"\" Return the movie with the highest utility \"\"\"\n",
     "    utilities = np.zeros(movies.shape[0])\n",
     "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
     "        movie_features = get_movie_features(movie)\n",
-    "        utilities[i] = utility(user_features, movie_features)\n",
+    "        utilities[i] = utility(user_features, movie_features, epoch - movie.last_t)\n",
     "    return movies[movies.index == movies.index[utilities.argmax()]]\n",
     "\n",
     "def all_recommandation(user_features, movies):\n",
     "    \"\"\" Return all movies sorted by utility \"\"\"\n",
     "    movies = movies.copy()\n",
-    "    movies['utilities'] = movies.apply(lambda mov: utility(user_features, get_movie_features(mov)), axis=1)\n",
+    "    movies['utilities'] = movies.apply(lambda mov: utility(user_features, get_movie_features(mov), 1000), axis=1)\n",
     "    return movies.sort_values(by=\"utilities\")\n",
     "\n",
     "\n",
     "def greedy_choice(user_features, movies, epoch):\n",
-    "    epsilon = 1 / math.sqrt(epoch + 1)\n",
-    "    return greedy_choice_no_t(user_features, movies, epsilon)\n",
+    "    \"\"\" greedy approach to the problem \"\"\"\n",
+    "    epsilon = 1 / math.sqrt(epoch+1)\n",
+    "    if random.random() > epsilon: # choose the best\n",
+    "        return best_recommandation(user_features, movies, epoch)\n",
+    "    else:\n",
+    "        return movies.sample()\n",
     "\n",
     "def greedy_choice_no_t(user_features, movies, epsilon=0.5):\n",
     "    \"\"\" greedy approach to the problem \"\"\"\n",
@@ -157,15 +161,18 @@
     "    \n",
     "def update_features(user_features, movie_features, rating, t):\n",
     "    \"\"\" update the user preferen \"\"\"\n",
-    "    return iterative_mean(user_features, movie_features * rating, t)\n",
+    "    return iterative_mean(user_features, movie_features * rating, t+1)\n",
     "\n",
     "def train_user(user, movies):\n",
     "    user_features = np.zeros(movies.shape[1] - 2)\n",
-    "    for t in tqdm(range(1, 1000)):\n",
+    "    movies = movies.copy()\n",
+    "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
+    "    for t in tqdm(range(1000)):\n",
     "        recommandation = greedy_choice(user_features, movies, t)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
     "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
     "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
+    "        movies.loc[movies.index.isin(recommandation.index),'last_t'] = t\n",
     "    return user_features"
    ]
   },
@@ -222,24 +229,6 @@
     "error = test_user(user, user_features, test)\n",
     "error"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
