[add] MCMC for equation (5) in paper

--- a/src/First attempt at learning.ipynb
+++ b/src/First attempt at learning.ipynb
@@ -26,6 +26,7 @@
     "from tqdm import tqdm\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from scipy.stats import spearmanr\n",
+    "import pymc3 as pm\n",
     "\n",
     "SELECTED_DATA_DIR = \"../selected-data/\"\n",
     "MOVIES_FILE = \"best_movie_ratings_features_engineered.csv\"\n",
@@ -269,6 +270,88 @@
     "    res_score.append(error)\n",
     "\n",
     "sum(res_score)/len(res_score)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Try Bayesian inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import theano\n",
+    "theano.config.compute_test_value = 'raise'\n",
+    "\n",
+    "size = 10\n",
+    "theta_prime = np.random.rand(size)\n",
+    "x = np.random.rand(size)\n",
+    "\n",
+    "c0 = 10\n",
+    "d0 = 3\n",
+    "e0 = 0.01\n",
+    "f0 = 0.001\n",
+    "g0 = 0.001\n",
+    "\n",
+    "I = np.eye(size)\n",
+    "print(theta_prime)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "with pm.Model():\n",
+    "    s = pm.Gamma('s', d0, e0)\n",
+    "    sigma = pm.InverseGamma('sigma', f0, g0)\n",
+    "    theta = pm.Normal('theta', mu=0, sd=c0 * sigma)\n",
+    "\n",
+    "    # Expected value of outcome\n",
+    "    mu = theta_prime * x * (1 - np.exp(-t/s))\n",
+    "\n",
+    "    # Likelihood (sampling distribution) of observations\n",
+    "    features = pm.MvNormal('R', mu=mu, cov=sigma*I, observed=theta_prime)\n",
+    "    \n",
+    "    step = pm.Metropolis()\n",
+    "    trace = pm.sample(15000, step=step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pm.summary(trace)\n",
+    "pm.traceplot(trace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "features.distribution.random()"
    ]
   },
   {
