[enh] supposed to obtain rating ??

--- a/src/First attempt at learning.ipynb
+++ b/src/First attempt at learning.ipynb
@@ -29,6 +29,7 @@
     "import pymc3 as pm\n",
     "import theano\n",
     "theano.config.compute_test_value = 'raise'\n",
+    "%matplotlib inline\n",
     "\n",
     "SELECTED_DATA_DIR = \"../selected-data/\"\n",
     "MOVIES_FILE = \"best_movie_ratings_features_engineered.csv\"\n",
@@ -320,16 +321,16 @@
     "with pm.Model():\n",
     "    s = pm.Gamma('s', d0, e0)\n",
     "    sigma = pm.InverseGamma('sigma', f0, g0)\n",
-    "    theta = pm.Normal('theta', mu=0, sd=c0 * sigma)\n",
+    "    theta = pm.MvNormal('theta', mu=0.5, cov=c0 * sigma * I)\n",
     "\n",
     "    # Expected value of outcome\n",
-    "    mu = theta_prime * x * (1 - np.exp(-t/s))\n",
+    "    mu = theta_prime.dot(x) * (1 - np.exp(-t/s))\n",
     "\n",
     "    # Likelihood (sampling distribution) of observations\n",
-    "    features = pm.MvNormal('R', mu=mu, cov=sigma*I, observed=theta_prime)\n",
+    "    rating = pm.Normal('rating', mu=mu, sd=sigma, observed=theta_prime)\n",
     "    \n",
     "    step = pm.Metropolis()\n",
-    "    trace = pm.sample(15000, step=step)"
+    "    trace = pm.sample(1000, step=step)"
    ]
   },
   {
@@ -352,7 +353,18 @@
    },
    "outputs": [],
    "source": [
-    "features.distribution.random()"
+    "rating.distribution.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "theta.distribution.random()"
    ]
   },
   {
