[add] multiple users

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -84,9 +84,9 @@
    },
    "outputs": [],
    "source": [
-    "def compute_utility(user_features, movie_features, epoch, s=1):\n",
+    "def compute_utility(user_features, movie_features, epoch, s):\n",
     "    \"\"\" Compute utility U based on user preferences and movie preferences \"\"\"\n",
-    "    res = user_features.dot(movie_features) #* (1 - math.exp(-epoch/s))\n",
+    "    res = user_features.dot(movie_features) * (1 - math.exp(-epoch/s))\n",
     "    return res\n",
     "\n",
     "def get_movie_features(movie):\n",
@@ -98,12 +98,12 @@
     "    else:\n",
     "        raise TypeError(\"{} should be a Series or DataFrame\".format(movie))\n",
     "    \n",
-    "def best_recommandation(user_features, movies, epoch):\n",
+    "def best_recommandation(user_features, movies, epoch, s):\n",
     "    \"\"\" Return the movie with the highest utility \"\"\"\n",
     "    utilities = np.zeros(movies.shape[0])\n",
     "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
     "        movie_features = get_movie_features(movie)\n",
-    "        utilities[i] = compute_utility(user_features, movie_features, epoch - movie.last_t)\n",
+    "        utilities[i] = compute_utility(user_features, movie_features, epoch - movie.last_t, s)\n",
     "    return movies[movies.index == movies.index[utilities.argmax()]]\n",
     "\n",
     "def all_recommandation(user_features, movies):\n",
@@ -112,15 +112,15 @@
     "    movies['utilities'] = movies.apply(lambda mov: compute_utility(user_features, get_movie_features(mov), 1000), axis=1)\n",
     "    return movies.sort_values(by=\"utilities\")\n",
     "\n",
-    "def random_choice(user_features, movies, epoch):\n",
+    "def random_choice(user_features, movies, epoch, s):\n",
     "    \"\"\" random approach to the problem, always exploring\"\"\"\n",
     "    return movies.sample()\n",
     "\n",
-    "def greedy_choice(user_features, movies, epoch):\n",
+    "def greedy_choice(user_features, movies, epoch, s):\n",
     "    \"\"\" greedy approach to the problem \"\"\"\n",
     "    epsilon = 1 / math.sqrt(epoch+1)\n",
     "    if random.random() > epsilon: # choose the best\n",
-    "        return best_recommandation(user_features, movies, epoch)\n",
+    "        return best_recommandation(user_features, movies, epoch, s)\n",
     "    else:\n",
     "        return movies.sample()\n",
     "\n",
@@ -139,19 +139,19 @@
     "    \"\"\" update the user preferen \"\"\"\n",
     "    return iterative_mean(user_features, movie_features * rating, t+1)\n",
     "\n",
-    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, N=20):\n",
+    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s=0.5):\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
     "    regret = 0\n",
     "    regret_utilities = []\n",
     "    regret_ratings = []\n",
     "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
-    "    for t in tqdm(range(N)):\n",
-    "        recommandation = choicef(user_features, movies, t)\n",
+    "    for t in range(20):\n",
+    "        recommandation = choicef(user_features, movies, t, s)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
     "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
     "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
-    "        utility = compute_utility(user_features, recommandation_features, t)\n",
+    "        utility = compute_utility(user_features, recommandation_features, t, s)\n",
     "        regret_utilities.append(utility)\n",
     "        regret_ratings.append(user_rating)\n",
     "        movies.loc[movies.index.isin(recommandation.index),'last_t'] = t\n",
@@ -235,19 +235,26 @@
    },
    "outputs": [],
    "source": [
-    "N_USER=10\n",
-    "res_score = []\n",
-    "for i in tqdm(range(N_USER)):\n",
-    "    user = users[users.user.isin(users.user.sample())]\n",
-    "    movies_user = movies[movies.index.isin(user.index)]\n",
-    "    msk = np.random.rand(movies_user.shape[0]) < 0.8\n",
-    "    train = movies_user.loc[msk]\n",
-    "    test = movies_user.loc[~msk]\n",
-    "    user_features = train_user(user, train)\n",
-    "    error = test_user(user, user_features, test)\n",
-    "    res_score.append(error)\n",
+    "N_USER=50\n",
+    "for s in [0.05, 0.5, 1, 2, 3, 4, 5, 10, 100, 1000]:\n",
+    "    regret_greedy_avg = []\n",
+    "    regret_random_avg = []\n",
+    "    for i in tqdm(range(N_USER)):\n",
+    "        user = users[users.user.isin(users.user.sample())]\n",
+    "        movies_user = movies[movies.index.isin(user.index)]\n",
+    "        regret_greedy_avg.append(reinforcement_learning(user, movies_user, greedy_choice, s))\n",
+    "        regret_random_avg.append(reinforcement_learning(user, movies_user, random_choice, s))\n",
     "\n",
-    "sum(res_score)/len(res_score)    "
+    "    rgreedy = sum(regret_greedy_avg)/len(regret_greedy_avg)\n",
+    "    rrandom = sum(regret_random_avg)/len(regret_random_avg) \n",
+    "    print(s , \" : \", rgreedy, rrandom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un s entre 1 et 2 semble optimal"
    ]
   },
   {
@@ -403,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
