--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -139,14 +139,14 @@
     "    \"\"\" update the user preferen \"\"\"\n",
     "    return iterative_mean(user_features, movie_features * rating, t+1)\n",
     "\n",
-    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s=0.5):\n",
+    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s=0.5, N=20):\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
     "    regret = 0\n",
     "    regret_utilities = []\n",
     "    regret_ratings = []\n",
     "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
-    "    for t in range(20):\n",
+    "    for t in range(N):\n",
     "        recommandation = choicef(user_features, movies, t, s)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
     "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
@@ -349,7 +349,7 @@
     "f0 = 0.001\n",
     "g0 = 0.001\n",
     "\n",
-    "def bayes_UCB(user_features, movies, epoch):\n",
+    "def bayes_UCB(user_features, movies, epoch, s):\n",
     "    I = np.eye(user_features.size)\n",
     "    ratings = np.zeros(movies.shape[0])\n",
     "    for i, (title, movie) in enumerate(movies.iterrows()): \n",
@@ -410,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
