[enh] function multiple users

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -231,23 +231,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], N_USER=50):\n",
+    "    regrets = []\n",
+    "    for algo in algorithms:\n",
+    "        regret_algo = []\n",
+    "        for i in tqdm(range(N_USER)):\n",
+    "            user = users[users.user.isin(users.user.sample())]\n",
+    "            movies_user = movies[movies.index.isin(user.index)]\n",
+    "            regret_algo.append(reinforcement_learning(user, movies_user, algo, s))\n",
+    "        regrets.append(regret_algo)\n",
+    "    regrets = [sum(regret)/len(regret) for regret in regrets]\n",
+    "    return regrets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "N_USER=50\n",
     "for s in [0.05, 0.5, 1, 2, 3, 4, 5, 10, 100, 1000]:\n",
-    "    regret_greedy_avg = []\n",
-    "    regret_random_avg = []\n",
-    "    for i in tqdm(range(N_USER)):\n",
-    "        user = users[users.user.isin(users.user.sample())]\n",
-    "        movies_user = movies[movies.index.isin(user.index)]\n",
-    "        regret_greedy_avg.append(reinforcement_learning(user, movies_user, greedy_choice, s))\n",
-    "        regret_random_avg.append(reinforcement_learning(user, movies_user, random_choice, s))\n",
-    "\n",
-    "    rgreedy = sum(regret_greedy_avg)/len(regret_greedy_avg)\n",
-    "    rrandom = sum(regret_random_avg)/len(regret_random_avg) \n",
-    "    print(s , \" : \", rgreedy, rrandom)"
+    "    regrets = rl_multiple_users(users, movies)\n",
+    "    print(s , \" : \", *regrets)"
    ]
   },
   {
