[enh] multiprocess multiple users

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -30,6 +30,7 @@
     "import theano\n",
     "theano.config.compute_test_value = 'raise'\n",
     "%matplotlib inline\n",
+    "from multiprocessing import Pool, cpu_count\n",
     "\n",
     "SELECTED_DATA_DIR = \"../selected-data/\"\n",
     "MOVIES_FILE = \"best_movie_ratings_features_engineered.csv\"\n",
@@ -235,14 +236,23 @@
    },
    "outputs": [],
    "source": [
+    "def wrapper_rl_one_user(args):\n",
+    "    return reinforcement_learning(*args)\n",
+    "\n",
     "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], N_USER=50):\n",
-    "    regrets = []\n",
+    "    regrets = []        \n",
     "    for algo in algorithms:\n",
     "        regret_algo = []\n",
-    "        for i in tqdm(range(N_USER)):\n",
+    "        args = []\n",
+    "        for i in range(N_USER):\n",
     "            user = users[users.user.isin(users.user.sample())]\n",
     "            movies_user = movies[movies.index.isin(user.index)]\n",
-    "            regret_algo.append(reinforcement_learning(user, movies_user, algo, s))\n",
+    "            choicef = algo\n",
+    "            s = 1\n",
+    "            N = 20\n",
+    "            args.append([user, movies_user, choicef, s, N])\n",
+    "        with Pool(cpu_count()) as p:\n",
+    "            regret_algo = p.map(wrapper_rl_one_user, args)\n",
     "        regrets.append(regret_algo)\n",
     "    regrets = [sum(regret)/len(regret) for regret in regrets]\n",
     "    return regrets"
@@ -393,6 +403,17 @@
    "outputs": [],
    "source": [
     "print(regret_random, regret_greedy, regret_bayes_ucb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "res = rl_multiple_users(users, movies, [greedy_choice, bayes_UCB], 20)"
    ]
   },
   {
