--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -239,7 +239,7 @@
     "def wrapper_rl_one_user(args):\n",
     "    return reinforcement_learning(*args)\n",
     "\n",
-    "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], N_USER=50):\n",
+    "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], s=1, N=20, N_USER=50):\n",
     "    regrets = []        \n",
     "    for algo in algorithms:\n",
     "        regret_algo = []\n",
@@ -248,8 +248,6 @@
     "            user = users[users.user.isin(users.user.sample())]\n",
     "            movies_user = movies[movies.index.isin(user.index)]\n",
     "            choicef = algo\n",
-    "            s = 1\n",
-    "            N = 20\n",
     "            args.append([user, movies_user, choicef, s, N])\n",
     "        with Pool(cpu_count()) as p:\n",
     "            regret_algo = p.map(wrapper_rl_one_user, args)\n",
@@ -373,7 +371,7 @@
     "def bayes_UCB(user_features, movies, epoch, s):\n",
     "    I = np.eye(user_features.size)\n",
     "    ratings = np.zeros(movies.shape[0])\n",
-    "    for i, (title, movie) in enumerate(movies.iterrows()): \n",
+    "    for i, (title, movie) in tqdm(enumerate(movies.iterrows())): \n",
     "        movies_features = get_movie_features(movies)\n",
     "        with pm.Model():\n",
     "            s = pm.Gamma('s', d0, e0)\n",
@@ -384,14 +382,14 @@
     "            mu = user_features.dot(movies_features) * (1 - np.exp(-epoch/s))\n",
     "\n",
     "            # Likelihood (sampling distribution) of observations\n",
-    "            rating = pm.Normal('rating', mu=mu, sd=sigma, observed=theta_prime)\n",
+    "            rating = pm.Normal('rating', mu=mu, sd=sigma, observed=user_features)\n",
     "\n",
     "            step = pm.Metropolis()\n",
-    "            trace = pm.sample(10, step=step)\n",
+    "            trace = pm.sample(10, step=step, njobs=1, progressbar=False)\n",
     "        ratings[i] = rating.distribution.random()[0]\n",
     "    return movies[movies.index == movies.index[ratings.argmax()]]\n",
     "        \n",
-    "regret_bayes_ucb = reinforcement_learning(user, movies_user, bayes_UCB, N=1)\n"
+    "#regret_bayes_ucb = reinforcement_learning(user, movies_user, bayes_UCB, N=1)\n"
    ]
   },
   {
@@ -413,7 +411,7 @@
    },
    "outputs": [],
    "source": [
-    "res = rl_multiple_users(users, movies, [greedy_choice, bayes_UCB], 20)"
+    "res = rl_multiple_users(users, movies, [greedy_choice, bayes_UCB], N=1, N_USER=1)"
    ]
   },
   {
