[enh] optimize rl function

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -144,8 +144,6 @@
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
     "    regret = 0\n",
-    "    regret_utilities = []\n",
-    "    regret_ratings = []\n",
     "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
     "    for t in range(N):\n",
     "        recommandation = choicef(user_features, movies, t, s)\n",
@@ -153,12 +151,8 @@
     "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
     "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
     "        utility = compute_utility(user_features, recommandation_features, t, s)\n",
-    "        regret_utilities.append(utility)\n",
-    "        regret_ratings.append(user_rating)\n",
+    "        regret += user_rating - utility\n",
     "        movies.loc[movies.index.isin(recommandation.index),'last_t'] = t\n",
-    "    \n",
-    "    for i in range(len(regret_ratings)):\n",
-    "        regret += regret_ratings[i] - regret_utilities[i]\n",
     "    return regret"
    ]
   },
@@ -293,7 +287,7 @@
    },
    "outputs": [],
    "source": [
-    "size = 10\n",
+    "size = 50\n",
     "theta_prime = np.random.rand(size)\n",
     "x = np.random.rand(size)\n",
     "\n",
@@ -385,7 +379,7 @@
     "            rating = pm.Normal('rating', mu=mu, sd=sigma, observed=user_features)\n",
     "\n",
     "            step = pm.Metropolis()\n",
-    "            trace = pm.sample(10, step=step, njobs=1, progressbar=False)\n",
+    "            trace = pm.sample(1000, step=step, njobs=1, progressbar=False)\n",
     "        ratings[i] = rating.distribution.random()[0]\n",
     "    return movies[movies.index == movies.index[ratings.argmax()]]\n",
     "        \n",
@@ -412,6 +406,17 @@
    "outputs": [],
    "source": [
     "res = rl_multiple_users(users, movies, [greedy_choice, bayes_UCB], N=1, N_USER=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "res"
    ]
   },
   {
